--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,13 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Yellowtail&display=swap");
+@import "reset.css";
+@import "variabablse.css";
+
+/* components */
+@import "components/status-bar.css";
+
+/* screens */
+@import "screens/login.css";
+
 body {
   font-family: "Open Sans", sans-serif;
-}
-
-.status-bar {
-  display: flex;
-  justify-content: space-between;
-}
-
-.status-bar__column:first-child span {
-  margin-right: 5px;
 }
